--- a/style.css
+++ b/style.css
@@ -55,6 +55,18 @@ body {
 .section-2 {
     border: 2px solid red;
     margin-top: 50px;
+    margin-bottom: 50px;
     margin-left: 240px;
     margin-right: 240px;
+    text-align: center;
+}
+
+.section-2 h1 {
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.section-2 p {
+    font-size: 18px;
+    color: rgb(151, 151, 151);
 }
