--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body {
 
 /* section-3 */
 .section-3 {
-    border: 2px solid green;
+    border: 2px solid rgb(255, 29, 29);
     margin-top: 50px;
     margin-left: 240px;
     margin-right: 240px;
@@ -81,43 +81,32 @@ body {
 }
 
 .section-3-1 {
+
     display: flex;
     justify-content: space-between;
     align-items: stretch;
-    justify-items: stretch;
-
+    gap: 50px;
 }
 
+.section-3-1 div {
 
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
 
 .section-3-1-1 {
-    width: 400px;
-    background-color: #ffa0a5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
-    padding: 30px;
-
+    background-color: rgb(255, 206, 206);
+    border-radius: 300px 300px 0px 0px;
 }
 
 .section-3-1-2 {
-    width: 400px;
-    background-color: #ffc1df;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
-    padding: 30px;
-
+    background-color: #dafdff;
+    border-radius: 300px 300px 0px 0px;
 }
 
 .section-3-1-3 {
-    width: 400px;
-    background-color: #83ecff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
-    padding: 30px;
+    background-color: #e8ffd2;
+    border-radius: 300px 300px 0px 0px;
 }
