--- a/style.css
+++ b/style.css
@@ -71,6 +71,8 @@ body {
     color: rgb(151, 151, 151);
 }
 
+
+
 /* section-3 */
 .section-3 {
     border: 2px solid rgb(255, 29, 29);
@@ -109,4 +111,136 @@ body {
 .section-3-1-3 {
     background-color: #e8ffd2;
     border-radius: 300px 300px 0px 0px;
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:576px) {
+
+    /* main-section */
+    .main-section-1 {
+        background-color: #ffe9ee;
+        border: 2px solid red;
+    }
+
+    /* section-1 */
+    .section-1-1 {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: space-between;
+        align-items: center;
+        padding: 16px;
+        margin: 16px;
+    }
+
+    .section-1-1-1 h1 {
+        font-size: 28px;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    .section-1-1-1 {
+        width: 100%;
+    }
+
+    .section-1-1-1 p {
+        font-size: 14px;
+        text-align: justify;
+        color: rgb(128, 128, 128);
+    }
+
+    .btn-1 {
+        background-color: #E55473;
+        color: white;
+        border-radius: 8px;
+        font-size: 20px;
+        font-weight: bold;
+        border: none;
+        padding: 20px 40px;
+        width: 100%;
+        margin-bottom: 50px;
+    }
+
+    .section-1-1-2 img {
+        width: 100%;
+    }
+
+
+
+    /* section-2 */
+    .section-2 {
+        border: 2px solid red;
+        margin: 16px;
+        text-align: center;
+    }
+
+    .section-2 h1 {
+        font-size: 40px;
+        font-weight: 800;
+    }
+
+    .section-2 p {
+        font-size: 14px;
+        color: rgb(151, 151, 151);
+        text-align: justify;
+    }
+
+
+
+    /* section-3 */
+    .section-3 {
+        border: 2px solid rgb(255, 29, 29);
+        margin: 0px;
+    }
+
+    .section-3-1 {
+
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-items: center;
+        align-items: stretch;
+        gap: 50px;
+    }
+
+    .section-3-1 img {
+        width: 75%;
+    }
+
+    .section-3-1 div {
+
+        width: 350px;
+        display: flex;
+        justify-content: center;
+        align-items: end;
+    }
+
+    .section-3-1-1 {
+        background-color: rgb(255, 206, 206);
+        border-radius: 10px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    .section-3-1-2 {
+        background-color: #dafdff;
+        border-radius: 10px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    .section-3-1-3 {
+        background-color: #e8ffd2;
+        border-radius: 10px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+
 }
