--- a/style.css
+++ b/style.css
@@ -116,6 +116,54 @@ body {
 
 
 
+.section-4 {
+    border: 2px solid rgb(255, 29, 29);
+    margin-top: 50px;
+    margin-left: 240px;
+    margin-right: 240px;
+    margin-bottom: 50px;
+    border-radius: 20px;
+    background-color: rgb(255, 232, 232);
+}
+
+.section-4-1 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-4-1 div {
+    border: 2px solid red;
+    text-align: center;
+
+}
+
+.section-4-1-1 {
+    padding: 20px;
+    background-color: rgb(252, 203, 253);
+    border-radius: 20px;
+}
+
+.section-4-1-2 {
+    padding: 20px;
+    background-color: rgb(215, 255, 215);
+    border-radius: 20px;
+}
+
+.section-4-1-3 {
+    padding: 20px;
+    background-color: rgb(245, 235, 177);
+    border-radius: 20px;
+}
+
+
+
+
+
+
 
 
 
@@ -241,6 +289,66 @@ body {
         padding-top: 20px;
         padding-bottom: 20px;
     }
+
+
+
+    .section-4 {
+
+        margin-top: 50px;
+        margin-left: 0px;
+        margin-right: 0px;
+        margin-bottom: 0px;
+        border-radius: 0px;
+        background-color: rgb(255, 232, 232);
+    }
+
+    .section-4-1 {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 16px;
+        padding: 16px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .section-4-1 div {
+
+        text-align: center;
+
+    }
+
+    .section-4-1-1 {
+        padding: 20px;
+        background-color: rgb(252, 203, 253);
+        border-radius: 8px;
+    }
+
+    .section-4-1-2 {
+        padding: 20px;
+        background-color: rgb(215, 255, 215);
+        border-radius: 8px;
+    }
+
+    .section-4-1-3 {
+        padding: 20px;
+        background-color: rgb(245, 235, 177);
+        border-radius: 8px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 }
