--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body {
     margin-right: 240px;
     margin-bottom: 50px;
     border-radius: 20px;
-    background-color: rgb(255, 232, 232);
+    background-color: rgb(255, 237, 237);
 }
 
 .section-4-1 {
@@ -162,6 +162,47 @@ body {
 .section-4 {
     border: 2px solid red;
 }
+
+
+
+
+
+
+
+
+
+
+footer {
+    margin-left: 240px;
+    margin-right: 240px;
+    text-align: center;
+    color: white;
+    background-color: black;
+    padding: 100px 100px 30px 100px;
+}
+
+.footer-orange {
+    color: orange;
+}
+
+footer h2 {
+    font-size: 30px;
+}
+
+footer p {
+    padding-left: 100px;
+    padding-right: 100px;
+
+}
+
+footer .p-2 {
+    margin-top: 100px;
+    font-size: 13px;
+}
+
+
+
+
 
 
 
@@ -338,6 +379,41 @@ body {
     }
 
 
+
+
+
+
+
+
+
+
+    footer {
+        margin: 0px;
+        text-align: center;
+        color: white;
+        background-color: black;
+        padding: 16px;
+    }
+
+    .footer-orange {
+        color: orange;
+    }
+
+    footer h2 {
+        font-size: 30px;
+    }
+
+    footer p {
+        padding: 16px;
+        text-align: justify;
+
+    }
+
+    footer .p-2 {
+        margin-top: 100px;
+        text-align: center;
+        font-size: 13px;
+    }
 
 
 
