--- a/style.css
+++ b/style.css
@@ -163,6 +163,13 @@ body {
     border: 2px solid red;
 }
 
+/* section-5 */
+.section-5 {
+    margin: 0px 240px 0px 240px;
+    border: 2px solid red;
+    text-align: center;
+
+}
 
 
 
@@ -172,7 +179,7 @@ body {
 /* section-8 */
 .section-8 {
     border: 2px solid red;
-    margin: 100px 240px;
+    margin: 50px 240px;
     text-align: center;
     background-image: url(Rectangle\ 9.png);
     background-repeat: no-repeat;
