--- a/style.css
+++ b/style.css
@@ -171,6 +171,10 @@ body {
 
 }
 
+.section-5 p {
+    margin-left: 200px;
+    margin-right: 200px;
+}
 
 
 
@@ -415,6 +419,23 @@ footer .p-2 {
         border-radius: 8px;
     }
 
+
+
+
+
+    /* section-5 */
+    .section-5 {
+        margin: 16px;
+        border: 2px solid red;
+        text-align: center;
+
+    }
+
+    .section-5 p {
+        margin-left: 20px;
+        margin-right: 20px;
+        text-align: justify;
+    }
 
 
 
